Add js, esbuild, eslint, and jest

--- a/package.json
+++ b/package.json
@@ -4,19 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "run-p eleventy:dev sass:dev",
-    "build": "run-s eleventy:build sass:build",
+    "start": "run-p eleventy:dev sass:dev js:dev",
+    "build": "run-s eleventy:build sass:build js:build",
     "sass:dev": "sass --watch --embed-source-map src/styles:dist",
     "sass:build": "sass --no-source-map --style=compressed src/styles:dist",
     "eleventy:dev": "eleventy --serve",
     "eleventy:build": "eleventy",
-    "format": "npx prettier --write ."
+    "js:dev": "esbuild src/js/*.js --format=esm --bundle=true --splitting=true --outdir=dist --watch --sourcemap=inline",
+    "js:build": "esbuild src/js/*.js --format=esm --bundle=true --splitting=true --outdir=dist --minify=true",
+    "format": "npx prettier --write .",
+    "lint": "run-s lint:js",
+    "lint:js": "eslint . --ext .js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "babel-jest": "^29.0.3",
+    "esbuild": "^0.15.9",
+    "eslint": "^8.23.1",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1"
   },
