--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
     "babel-jest": "^29.0.3",
+    "eleventy-plugin-prismic": "^0.2.1",
     "esbuild": "^0.15.9",
     "eslint": "^8.23.1",
     "jest": "^29.0.3",
